--- a/src/pages/view/styles/ItemGrid.module.css
+++ b/src/pages/view/styles/ItemGrid.module.css
@@ -1,3 +1,3 @@
 .grid {
-    margin-top: var(--spacers-dp16);
+    margin-top: var(--spacers-dp12);
 }
